--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ CGA2Framework/CGA2Framework/libs/
 *.sdf
 *.sln
 *.opensdf
+CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/CGA2Framework.lastbuildstate
+CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
