--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ CGA2Framework/CGA2Framework/libs/
 *.opensdf
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/CGA2Framework.lastbuildstate
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
+*.tlog
