--- a/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj
+++ b/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj
@@ -77,9 +77,11 @@
     <ClCompile Include="ContentLoader.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameWindow.cpp" />
+    <ClCompile Include="GLFWHandler.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -91,9 +93,12 @@
     <ClInclude Include="ContentLoader.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameWindow.h" />
+    <ClInclude Include="GLFWHandler.h" />
+    <ClInclude Include="headers.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="libs\glm\glm\glm.hpp" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="MainGame.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Scene.h" />
