--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ CGA2Framework/CGA2Framework/libs/
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/CGA2Framework.lastbuildstate
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.tlog
+*.filters
+*.vcxproj
