--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.png
 CGA2Framework/Debug/
 CGA2Framework.zip
+*.suo
+*.user
+CGA2Framework/CGA2Framework/Release/
