--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.mtl
 *.png
 CGA2Framework/Debug/
+CGA2Framework/CGA2Framework/Release/
+*.user
+*.suo
