--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.filters
 *.vcxproj
 CGA2Framework/Debug/
+CGA2Framework/Release/
 CGA2Framework.zip
 *.suo
 *.user
