Turneed CGA2Framework into a static library and created a test application to make use of it. Moved some stuff around and made the scene loader use relative paths of where the scene file is located at. Using the lib works

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ CGA2Framework.zip
 CGA2Framework/CGA2Framework/Release/
 CGA2Framework/ipch/
 CGA2Framework/CGA2Framework/glerrorlog.txt
+CGA2Framework/TestGame/glerrorlog.txt
