--- a/CGA2Framework/CGA2Framework/GlewGlfwMSVC13.props
+++ b/CGA2Framework/CGA2Framework/GlewGlfwMSVC13.props
@@ -14,6 +14,9 @@
     <Link>
       <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Lib>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
