--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@ CGA2Framework/CGA2Framework/libs/
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/CGA2Framework.lastbuildstate
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.tlog
-*.filters
-*.vcxproj
 CGA2Framework/Debug/
 CGA2Framework/Release/
 CGA2Framework.zip
@@ -17,3 +15,4 @@ CGA2Framework/CGA2Framework/Release/
 CGA2Framework/ipch/
 CGA2Framework/CGA2Framework/glerrorlog.txt
 CGA2Framework/TestGame/glerrorlog.txt
+CGA2Framework/TestGame/Debug/TestGame.Build.CppClean.log
