--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ CGA2Framework/CGA2Framework/libs/
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/CGA2Framework.lastbuildstate
 CGA2Framework/CGA2Framework/Release/CGA2Framework.tlog/cl.command.1.tlog
 *.tlog
+TestGame/Debug/
+TestGame/Release/
 CGA2Framework/Debug/
 CGA2Framework/Release/
 CGA2Framework.zip
