--- a/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj
+++ b/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj
@@ -22,7 +22,7 @@
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -58,6 +58,9 @@
       <EmbedManagedResourceFile>
       </EmbedManagedResourceFile>
     </Link>
+    <Lib>
+      <AdditionalDependencies>openvr_api.lib;opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -66,12 +69,17 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>openvr_api.lib;opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Lib>
+      <AdditionalDependencies>openvr_api.lib;opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -120,6 +128,7 @@
     <ClInclude Include="TWODShader.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="VRRenderercpp.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DDSLoader.cpp" />
@@ -160,6 +169,7 @@
     <ClCompile Include="TWODShader.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="Vertex.cpp" />
+    <ClCompile Include="VRRenderercpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
