--- a/CGA2Framework/TestGame/TestGame.vcxproj
+++ b/CGA2Framework/TestGame/TestGame.vcxproj
@@ -58,6 +58,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\SourceTree\oglprotoga\CGA2Framework\CGA2Framework\libs\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
