--- a/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
+++ b/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="Primitives.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="VRRenderercpp.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DDSLoader.cpp">
@@ -270,6 +273,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Primitives.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="VRRenderercpp.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
