--- a/CGA2Framework/TestGame/TestGame.vcxproj
+++ b/CGA2Framework/TestGame/TestGame.vcxproj
@@ -42,6 +42,9 @@
     <IncludePath>$(ProjectDir)\..\CGA2Framework\libs\include\;$(IncludePath)</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>$(ProjectDir)\..\CGA2Framework\libs\include\;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
