--- a/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
+++ b/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="VRRenderercpp.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Billboard.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DDSLoader.cpp">
@@ -276,6 +279,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="VRRenderercpp.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Billboard.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
