--- a/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
+++ b/CGA2Framework/CGA2Framework/CGA2Framework.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Quelldateien">
@@ -160,9 +160,12 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Billboard.h">
-<Filter>Headerdateien</Filter>
+      <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="DeferredRenderer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Transformable.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
@@ -285,7 +288,7 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Billboard.cpp">
-<Filter>Quelldateien</Filter>
+      <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="DeferredRenderer.cpp">
       <Filter>Quelldateien</Filter>
