Changed paths to non dev environment

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ CGA2Framework/TestGame/glerrorlog.txt
 CGA2Framework/TestGame/Debug/TestGame.Build.CppClean.log
 CGA2Framework/TestGame/Release/
 CGA2Framework/TestGame/Debug/
+Release/
