--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ CGA2Framework.zip
 CGA2Framework/CGA2Framework/Release/
 CGA2Framework/ipch/
 CGA2Framework/CGA2Framework/glerrorlog.txt
+Release/
+CGA2Framework/TestGame/
