Reimplemented VR renderer. Made VR renderer work with our deferred renderer. Extended texture2d with a reallocate function to adapt texture sizes when resizing viewport.

--- a/CGA2Framework/CGA2Framework/GlewGlfwMSVC13.props
+++ b/CGA2Framework/CGA2Framework/GlewGlfwMSVC13.props
@@ -12,7 +12,7 @@
       <PreprocessorDefinitions>GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib;openvr_api.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Lib>
       <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;glew32s.lib</AdditionalDependencies>
